--- a/index.html
+++ b/index.html
@@ -3,10 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <title>Weather</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>GitHub Installer</h1>
+    <div class="container">
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <h1 id="h1">Paris</h1>
+            <div
+              class="d-flex justify-content-between align-items-center"
+              id="spacing"
+            >
+              <span id="weather-emoji">☀️</span>
+              <h2 id="temperature-number">29</h2>
+              <span id="cel">°C</span>
+              <span>|</span>
+              <span id="fahr">°F</span>
+            </div>
+          </div>
+          <ul>
+            <li id="current-date">Current time</li>
+            <li>Wind: <span id="wind"></span> km/h</li>
+            <li>Humidity: <span id="humidity"></span>%</li>
+            <li><span id="description"></span></li>
+          </ul>
+          <hr />
+          <form class="city">
+            <input
+              type="search"
+              id="input-city"
+              placeholder="Type your city..."
+              autofocus="on"
+              autocomplete="off"
+            />
+            <input type="submit" value="Search" id="search-button" />
+            <input type="submit" value="Current" id="current-button" />
+          </form>
+          <div class="group">
+            <div class="row" id="days">
+              <div class="col p-0">Mon</div>
+              <div class="col p-0">Tue</div>
+              <div class="col p-0">Wed</div>
+              <div class="col p-0">Thu</div>
+              <div class="col p-0">Fri</div>
+            </div>
+            <div class="row" id="temperature" p-0>
+              <div class="col p-0">28°</div>
+              <div class="col p-0">29°</div>
+              <div class="col p-0">27°</div>
+              <div class="col p-0">28°</div>
+              <div class="col p-0">29°</div>
+            </div>
+
+            <div class="row" id="emoji">
+              <div class="col p-0">☀️</div>
+              <div class="col p-0">⛅️</div>
+              <div class="col p-0">☀️</div>
+              <div class="col p-0">☁️</div>
+              <div class="col p-0">🌦</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
