Added open-source link

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
         </div>
       </div>
     </div>
+    <div id="code-link">
+      <a id="open-source-link" href="https://github.com/YaroslavaV1/weather-app"> Open-source </a>
+      code by Yaroslava Vitkovska
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
