added weather icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
               class="d-flex justify-content-between align-items-center"
               id="spacing"
             >
-              <span id="weather-emoji">☀️</span>
+              <span id="weather-emoji">
+                <img
+                  src="https://openweathermap.org/img/wn/02d@2x.png"
+                  alt="icon" id="icon"
+              /></span>
               <h2 id="temperature-number">29</h2>
               <span id="cel">°C</span>
               <span>|</span>
@@ -77,7 +81,13 @@
       </div>
     </div>
     <div id="code-link">
-      <a id="open-source-link" href="https://github.com/YaroslavaV1/weather-app"> Open-source </a>
+      <a
+        id="open-source-link"
+        href="https://github.com/YaroslavaV1/weather-app"
+        target="_blank"
+      >
+        Open-source
+      </a>
       code by Yaroslava Vitkovska
     </div>
     <script src="index.js"></script>
