added unit conversion

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
               <span id="weather-emoji">
                 <img
                   src="https://openweathermap.org/img/wn/02d@2x.png"
-                  alt="icon" id="icon"
+                  alt="icon"
+                  id="icon"
               /></span>
               <h2 id="temperature-number">29</h2>
-              <span id="cel">°C</span>
+              <span> <a href="#" id="cel">°C</a> </span>
               <span>|</span>
-              <span id="fahr">°F</span>
+              <span> <a href="#" id="fahr">°F</a></span>
             </div>
           </div>
           <ul>
@@ -61,7 +62,7 @@
               <div class="col p-0">Thu</div>
               <div class="col p-0">Fri</div>
             </div>
-            <div class="row" id="temperature" p-0>
+            <div class="row" id="temperature-row" p-0>
               <div class="col p-0">28°</div>
               <div class="col p-0">29°</div>
               <div class="col p-0">27°</div>
