Added the forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -63,11 +63,26 @@
               <div class="col p-0">Fri</div>
             </div>
             <div class="row" id="temperature-row" p-0>
-              <div class="col p-0">28°</div>
-              <div class="col p-0">29°</div>
-              <div class="col p-0">27°</div>
-              <div class="col p-0">28°</div>
-              <div class="col p-0">29°</div>
+              <div class="col p-0">
+                <span class="weather-forecast-temp-max">28° </span>
+                <span class="weather-forecast-temp-min">17°</span>
+              </div>
+              <div class="col p-0">
+                <span class="weather-forecast-temp-max">28° </span>
+                <span class="weather-forecast-temp-min">17°</span>
+              </div>
+              <div class="col p-0">
+                <span class="weather-forecast-temp-max">28° </span>
+                <span class="weather-forecast-temp-min">17°</span>
+              </div>
+              <div class="col p-0">
+                <span class="weather-forecast-temp-max">28° </span>
+                <span class="weather-forecast-temp-min">17°</span>
+              </div>
+              <div class="col p-0">
+                <span class="weather-forecast-temp-max">28° </span>
+                <span class="weather-forecast-temp-min">17°</span>
+              </div>
             </div>
 
             <div class="row" id="emoji">
