--- a/index.html
+++ b/index.html
@@ -54,57 +54,19 @@
             <input type="submit" value="Search" id="search-button" />
             <input type="submit" value="Current" id="current-button" />
           </form>
-          <div class="group">
-            <div class="row" id="days">
-              <div class="col p-0">Mon</div>
-              <div class="col p-0">Tue</div>
-              <div class="col p-0">Wed</div>
-              <div class="col p-0">Thu</div>
-              <div class="col p-0">Fri</div>
-            </div>
-            <div class="row" id="temperature-row" p-0>
-              <div class="col p-0">
-                <span class="weather-forecast-temp-max">28° </span>
-                <span class="weather-forecast-temp-min">17°</span>
-              </div>
-              <div class="col p-0">
-                <span class="weather-forecast-temp-max">28° </span>
-                <span class="weather-forecast-temp-min">17°</span>
-              </div>
-              <div class="col p-0">
-                <span class="weather-forecast-temp-max">28° </span>
-                <span class="weather-forecast-temp-min">17°</span>
-              </div>
-              <div class="col p-0">
-                <span class="weather-forecast-temp-max">28° </span>
-                <span class="weather-forecast-temp-min">17°</span>
-              </div>
-              <div class="col p-0">
-                <span class="weather-forecast-temp-max">28° </span>
-                <span class="weather-forecast-temp-min">17°</span>
-              </div>
-            </div>
-
-            <div class="row" id="emoji">
-              <div class="col p-0">☀️</div>
-              <div class="col p-0">⛅️</div>
-              <div class="col p-0">☀️</div>
-              <div class="col p-0">☁️</div>
-              <div class="col p-0">🌦</div>
-            </div>
-          </div>
+          <div id="forecast"></div>
         </div>
       </div>
-    </div>
-    <div id="code-link">
-      <a
-        id="open-source-link"
-        href="https://github.com/YaroslavaV1/weather-app"
-        target="_blank"
-      >
-        Open-source
-      </a>
-      code by Yaroslava Vitkovska
+      <div id="code-link">
+        <a
+          id="open-source-link"
+          href="https://github.com/YaroslavaV1/weather-app"
+          target="_blank"
+        >
+          Open-source
+        </a>
+        code by Yaroslava Vitkovska
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
